Fixing findbugs found problems.